# Automated-Changelog-Agent

./: README.md  draw.excalidraw  main.py  pyproject.toml
config/: config.dev.yaml  config.prod.yaml
notebooks/: app.py  app_v01.py  v01.ipynb
src/changelog_agent/: __init__.py
src/changelog_agent/classifier_service/: __init__.py
src/changelog_agent/classifier_service/app/agent/: classification_agent.py
src/changelog_agent/classifier_service/app/llm_clients/: llm_client.py
src/changelog_agent/database_service/: config.py  database.py  dependencies.py  main.py
src/changelog_agent/database_service/models/: classifier.py  webhook.py
src/changelog_agent/database_service/routers/: webhook.py
src/changelog_agent/database_service/schemas/: classifier.py  webhook.py
src/changelog_agent/database_service/services/: webhook_service.py
src/changelog_agent/llm_clients/: llm_client.py
src/changelog_agent/orchestrator_service/: README.md  __init__.py  main.py
src/changelog_agent/orchestrator_service/app/: app.py  main.py
src/changelog_agent/release_service/: __init__.py
src/changelog_agent/summarizer_service/: __init__.py
src/changelog_agent/utils/: __init__.py  exception_config.py  logger_config.py
src/changelog_agent/webhook_service/: README.md  __init__.py  main.py
src/changelog_agent/webhook_service/app/: app.py  main.py
src/database/app/: app.py
src/database/app/api/: webhook.py  webhook_db.py
src/database/app/db/: db.py
src/database/app/models/: model.py  webhook.py  webhook_table.py
src/database/app/schemas/: schema.py
(+30 files in other folders)
